[metadata]
name = lantern
version = 0.1.0
description = Lightweight Adaptive Network Traffic Emitter & Router Network
author = bugmaker00

[options]
packages = find:
python_requires = >=3.10
install_requires =
    cryptography>=41.0

[options.entry_points]
console_scripts =
    lantern = lantern.cli:main
